Add existing file

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<!-- saved from url=(0059)file:///Users/student/Desktop/thankyou/thankyou.html#thanks -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-	<script src="./Thank you!_files/jquery.min.js"></script>
-	<link rel="stylesheet" href="./Thank you!_files/thankyou1.css">
-	<link rel="stylesheet" href="./Thank you!_files/font-awesome.min.css">
-	<link href="./Thank you!_files/css" rel="stylesheet" type="text/css">
+<html>
+<head>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<link rel="stylesheet" href="thankyou1.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://fonts.googleapis.com/css?family=Cantarell|Fjalla+One|PT+Sans+Narrow" rel="stylesheet">
 	<title>Thank you!</title>
 </head>
 
@@ -35,27 +35,26 @@ $(document).ready(function(){
   });
 });
 </script>
-
+</head>
 
 	<div class="redbar"></div>
 	<div class="menu">
 		<div class="menucontent">
-			<a href="file:///Users/student/Desktop/thankyou/thankyou.html">Home</a>
-			<a href="file:///Users/student/Desktop/thankyou/thankyou.html#thanks">Dear BofA</a>
-	    <a href="file:///Users/student/Desktop/thankyou/memories.html">Memories</a>
-	    <a href="file:///Users/student/Desktop/thankyou/notes.html">Notes</a>
-	    <a href="file:///Users/student/Desktop/thankyou/projects.html">Projects</a>
+			<a href="thankyou.html">Home</a>
+			<a href="#thanks">Dear BoA</a>
+	    <a href="memories.html">Memories</a>
+	    <a href="notes.html">Notes</a>
 		</div>
 	</div>
-	
+	</div>
 
-
-	<div class="introimg"><img src="./Thank you!_files/main.jpg"></div>
+<body>
+	<div class="introimg"><img src="images/main.jpg"></div>
 	<div class="intro">
 		<center>
 			<h1>Thank You</h1><br>
 			<h2><mark>From Girls Who Code Bank of America NYC 2018</mark></h2>
-			<a href="file:///Users/student/Desktop/thankyou/thankyou.html#thanks"><button><img src="./Thank you!_files/button.svg" style="height:40px; width:40px;"></button></a>
+			<a href="#thanks"><button><img src="button.svg" style="height:40px; width:40px;"></button></a>
 		</center>
 	</div>
 
@@ -65,13 +64,17 @@ $(document).ready(function(){
 		<h1> Dear Bank of America,</h1>
 		<h3>Thank you for this summer of 2018! We really enjoyed our time here, and we're sad to leave. You've taught us a lot in these past 7 weeks, and we hope that this website will be a reminder of the fun we had!</h3>
 		</section>
-	</div>
 
-	<br>
+		<center><h1>Thank you</h1>
+
+		<h3>Aditya Bhasin<br>Craig Froelick<br>Kris Fador<br>Rosa Ramos-Kwok<br>Lisa Chen<br>Anna Nepomnyaschy<br>Hannah Kaplan<br>Christine Mahoney<br>Jen Zavoda<br>Mary Bessada<br>Amy Hart<br>Kaitlin Doumar<br>Carol Anthony<br>Sokam Ude<br>Robert Locke<br>Joanne Mosuela<br>Shannon Maloney<br>Anuradha Parameswaran<br>Debra Brand<br>Barbara Musen<br>Neel Shaikh<br>Laura Chapa<br>Upasana Mainali<br>Geetha Dwarakapuram<br>Suneetha Sadda<br>Rick Sumrall<br>Yeen Tham<br>Manny Malasaga<br>Natalie Valmont<br>Laura Chapa </h3></center>
+
+
+
+
 
 	<div class="footer"><center>
-		<img src="./Thank you!_files/banklogo.png">
-		<img src="./Thank you!_files/gwc.png">
+		<img src="images/banklogo.png">
+		<img src="images/gwc.png">
 	</center></div>
-
-</body></html>
+</body>
