--- a/memories.html
+++ b/memories.html
@@ -39,11 +39,10 @@ $(document).ready(function(){
 	<div class="redbar"></div>
 	<div class="menu">
 		<div class="menucontent">
-			<a href="thankyou.html">Home</a>
-			<a href="#thanks">Dear BofA</a>
+			<a href="index.html">Home</a>
+			<a href="#thanks">Dear BoA</a>
 	    <a href="memories.html">Memories</a>
 	    <a href="notes.html">Notes</a>
-	    <a href="projects.html">Projects</a>
 		</div>
 	</div>
 	</div>
@@ -63,11 +62,11 @@ $(document).ready(function(){
 				</div>
 
 				<div class="mySlides fade">
-			  	<img src="images/slide2.jpg">
+			  	<img src="images/slide9.jpg">
 				</div>
 
 				<div class="mySlides fade">
-			  	<img src="images/slide3.jpg">
+			  	<img src="images/slide46.jpg">
 				</div>
 			</div>
 			<br>
@@ -111,7 +110,217 @@ $(document).ready(function(){
 
 		<div class="responsive">
 				<a target="_blank" href="images/slide9.jpg">
-					<img src="images/slide9.jpg">
+					<img src="images/slide2.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide10.jpg">
+					<img src="images/slide10.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide11.jpg">
+					<img src="images/slide11.jpg">
+				</a>
+		</div>
+
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide12.jpg">
+					<img src="images/slide12.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide13.jpg">
+					<img src="images/slide13.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide14.jpg">
+					<img src="images/slide14.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide15.jpg">
+					<img src="images/slide15.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide16.jpg">
+					<img src="images/slide16.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide17.jpg">
+					<img src="images/slide17.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide18.jpg">
+					<img src="images/slide18.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide19.jpg">
+					<img src="images/slide19.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide20.jpg">
+					<img src="images/slide20.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide21.jpg">
+					<img src="images/slide21.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide22.jpg">
+					<img src="images/slide22.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide23.jpg">
+					<img src="images/slide23.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide24.jpg">
+					<img src="images/slide24.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide25.jpg">
+					<img src="images/slide25.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide27.jpg">
+					<img src="images/slide27.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide28.jpg">
+					<img src="images/slide28.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide29.jpg">
+					<img src="images/slide29.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide30.jpg">
+					<img src="images/slide30.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide31.jpg">
+					<img src="images/slide31.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide32.jpg">
+					<img src="images/slide32.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide33.jpg">
+					<img src="images/slide33.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide34.jpg">
+					<img src="images/slide34.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide35.jpg">
+					<img src="images/slide35.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide36.jpg">
+					<img src="images/slide36.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide37.jpg">
+					<img src="images/slide37.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide38.jpg">
+					<img src="images/slide38.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide39.jpg">
+					<img src="images/slide39.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide40.jpg">
+					<img src="images/slide40.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide41.jpg">
+					<img src="images/slide41.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide42.jpg">
+					<img src="images/slide42.jpg">
+				</a>
+		</div>
+		<div class="responsive">
+				<a target="_blank" href="images/slide43.jpg">
+					<img src="images/slide43.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide44.jpg">
+					<img src="images/slide44.jpg">
+				</a>
+		</div>
+
+		<div class="responsive">
+				<a target="_blank" href="images/slide45.jpg">
+					<img src="images/slide45.jpg">
 				</a>
 		</div>
 	</div>
