--- a/notes.html
+++ b/notes.html
@@ -40,15 +40,155 @@ $(document).ready(function(){
 	<div class="redbar"></div>
 	<div class="menu">
 		<div class="menucontent">
-			<a href="thankyou.html">Home</a>
-			<a href="#thanks">Dear BofA</a>
+			<a href="index.html">Home</a>
+			<a href="#thanks">Dear BoA</a>
 	    <a href="memories.html">Memories</a>
 	    <a href="notes.html">Notes</a>
-	    <a href="projects.html">Projects</a>
 		</div>
 	</div>
 	</div>
 
-<body><center><div class="OMainCentered">
-	<h1>notes</h1>
-</center></div>
+<body>
+	<center><div class="OMainCentered">
+		<h1>notes</h1>
+	</center></div>
+
+	<div class="leftNote">
+		<h3>Dear Ankita,</h3>
+		<p>Thank you so much for being my mentor this summer. You helped me think a lot about my future and about what I really want as a career. It was fun getting to know you and I hope we keep in touch!<br>-Tiffany </p>
+	</div>
+
+	<div class="rightNote">
+		<h3>Dear Erinkate,</h3>
+		<p>Thank you so much for being my mentor this summer. You helped me think about aspects of the college process that I didn't consider before, as well as appealing careers for me. It was fun getting to know you and hearing about your daughter, and I hope we keep in touch! -Tiffany</p>
+	</div>
+
+
+	<div class="leftNote">
+		<h3>Dear Bhumika,</h3>
+		<p>Thank you for all the advice you've given me! It was great having you talk with me! I learned a lot about life during and after college, and your personal experiences. I hope that I was able to teach you something too :) - Ashlynn</p>
+	</div>
+
+	<div class="rightNote">
+		<h3>Dear Debra,</h3>
+		<p>These past few weeks have been so much fun! I'm glad I got to learn about you and your experiences in the workplace and out. Talking with you about college and everything made me less scared about my future. Thank you for everything :) - Ashlynn</p>
+	</div>
+
+
+	<div class="leftNote">
+		<h3>Dear Sharon,</h3>
+		<p>Thank you for being so nice and encouraging. And for informing me about many things about my future. You were a great mentor. - Garnelle</p>
+	</div>
+
+	<div class="rightNote">
+		<h3>Dear Anuradha,</h3>
+		<p>Thank you for being so encouraging and caring. And for believing in me. You were a great mentor throughout my time in girls who code. - Garnelle</p>
+	</div>
+
+	<div class="leftNote">
+		<h3>Dear Abigail,</h3>
+		<p>I am so glad I got to have you as an amazing mentor such as you this summer. You taught me many insightful things that I never knew. It was so great to learn about your personal experiences. I will forever cherish the time that we had spent together. Thank you so much!
+		-Aaryaa</p>
+	</div>
+
+	<div class="rightNote">
+		<h3>Dear Alexis,</h3>
+		<p>Thank you so much for being a great mentor. It was really fun getting to know you and hearing about your personal experiences. Thank you so much.
+		-Aaryaa</p>
+	</div>
+
+
+
+	<div class="centerNote">
+		<h3>Dear Margarita,</h3>
+		<p>Thank you for being my mentor this summer. I have enjoyed talking to you and hearing your advice for navigating college and life afterwards. I am thankful for your support! I look forward to keeping in touch.
+		-Jennifer</p>
+	</div>
+
+
+	<div class="centerNote">
+		<h3>Dear Marcia and Samantha,</h3>
+		<p>I cannot be more grateful for getting you two to guide me this summer. Thank you for all of the insight and knowledge you've shared with me. I willl forever cherish the time we spent together and the advice you've given me. I hope we can stay in touch so you can watch my growth as you've done so well this summer. Thank you for making girls who code that much better. - Sabina</p>
+	</div>
+
+
+	<div class="centerNote">
+		<h3>Dear Daniella and Esther,</h3>
+		<p>I'm thankful you both guided me to begin to think about my future. I gained important knowledge about various aspects such as financial aid, student loans, and more. I felt encouraged to experience more and have an open mind. In addition, I know to be honest with myself and what I love. Also that a balance in the workforce and personal life is significant. Thank you for listening to me and my concerns. - Johana</p>
+	</div>
+
+	<div class="centerNote">
+		<h3>Dear Gisele and Aditi,</h3>
+		<p>The last few weeks at BoA has been quite an experience. Thanks for being amazing mentors and for guiding me and giving me helpful advice for  my college process and career paths. I will always be grateful for meeting such supportive people. - Grace</p>
+	</div>
+
+
+	<div class="centerNote">
+		<h3>To Angel and Trish,</h3>
+		<p>Thank you for your advice over the past few weeks. I have really enjoyed my conversations with you, and you have given me a lot of guidance for college and my future career. - Katie</p>
+	</div>
+
+
+	<div class="centerNote">
+		<h3>Dear Ash and Caroline, </h3>
+		<p>Thank you so much for all the advice and guidance you have given me these past seven weeks. You ahve guided me through the beginning of the college process and helped me learn so much more about myself. I loved getting to know both of you and spending time with you. I hope we keep in touch! - Jamie</p>
+	</div>
+
+
+	<div class="centerNote">
+		<h3>Dear Benida and Betsy,</h3>
+		<p>Thank you for the advice and knowledge that you have given me! I really enjoyed spending time with both of you and planning out my steps for a successful career. I wish you well in your future. - Abby</p>
+	</div>
+
+	<div class="centerNote">
+		<h3>Dear Emma and Mary, </h3>
+		<p>Thank you for taking the time out of your day to sit and talkto me. I appreciate your addvice and will take in everything that you girls have said when applying to college. - Esme</p>
+	</div>
+
+	<div class="centerNote">
+		<h3>Dear Panma and Chinmoyi</h3>
+		<p>I am very grateful that I got to be your mentee. It was a pleasure discussing various topics ranging from budgeting to college choices. I am glad that I have two women in tech that I look up to now!</p>
+	</div>
+
+	<div class="centerNote">
+		<h3>Dear Joy and Priscilla,</h3>
+		<p>Having you both as my mentors has been a blast. Thank you for dealing with me even when I'm being really quiet. I really enjoyed talking about college, possible future careers, and more. I hope we can stay in contact in the future. Thank you. - Rebecca</p>
+	</div>
+
+	<div class="centerNote">
+		<h3>Dear Katelin and Saloni</h3>
+		<p>Thank you for giving me advice that I will use for the rest of my life. You guys have inspired me to pursue computer science in college and I am very grateful. Thank you so much! -Alexandra</p>
+	</div>
+
+	<div class="centerNote">
+		<h3>Dear Jane and Alexandra,</h3>
+		<p>Thank you for being such helpful and supportive mentors! I really appreciate all of the advice about college, managing money, and life in general. I’m so grateful you guys took time out of your summer to help me and and I’m glad I have two women in tech to look up to! </p>
+	</div>
+
+	<div class="centerNote">
+		<h3>Dear Danielle,</h3>
+		<p>Thank you so much for your support and advice this summer! I really enjoyed our talks. - Gemma</p>
+	</div>
+
+	<div class="centerNote">
+		<h3>Dear Hyesil and Andraya.</h3>
+		<p>Thank you for listening to me these past 7 weeks. I will remember the advice you gave about college and my career. - Amalia</p>
+		</div>
+
+	<div class="centerNote">
+		<h3>Dear Qiu and Anisha, </h3>
+		<p>I am writing this to thank you for being an amazing mentor during my time at the Bank of America. As a result of your guidance, I have a much deeper understanding of computer science. I can now say I see myself pursuing a career in computer science. - Mekayla</p>
+	</div>
+
+	<div class="centerNote">
+		<h3>Dear mentors</h3>
+		<p>Thank you for being my mentors. You guys were helpful in each topic we discussed. - Deatema</p>
+	</div>
+
+	<div class="centerNote">
+		<h3>Dear Jacklyn and Katherine</h3>
+		<p>You guys are truly great. Thank you for giving me advice. I won't forget y'all when I'm famous. - Jaylene</p>
+	</div>
+</body>
+
+</html>
