--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ $(document).ready(function(){
 	<div class="redbar"></div>
 	<div class="menu">
 		<div class="menucontent">
-			<a href="thankyou.html">Home</a>
+			<a href="index.html">Home</a>
 			<a href="#thanks">Dear BoA</a>
 	    <a href="memories.html">Memories</a>
 	    <a href="notes.html">Notes</a>
