--- a/notes.html
+++ b/notes.html
@@ -146,8 +146,8 @@ $(document).ready(function(){
 	</div>
 
 	<div class="centerNote">
-		<h3>Dear Panma and Chinmoyi</h3>
-		<p>I am very grateful that I got to be your mentee. It was a pleasure discussing various topics ranging from budgeting to college choices. I am glad that I have two women in tech that I look up to now!</p>
+		<h3>Dear Pamma and Chinmoyi</h3>
+		<p>I am very grateful that I got to be your mentee. It was a pleasure discussing various topics ranging from budgeting to college choices. I am glad that I have two women in tech that I look up to now! - Elizabeth</p>
 	</div>
 
 	<div class="centerNote">
@@ -162,7 +162,7 @@ $(document).ready(function(){
 
 	<div class="centerNote">
 		<h3>Dear Jane and Alexandra,</h3>
-		<p>Thank you for being such helpful and supportive mentors! I really appreciate all of the advice about college, managing money, and life in general. I’m so grateful you guys took time out of your summer to help me and and I’m glad I have two women in tech to look up to! </p>
+		<p>Thank you for being such helpful and supportive mentors! I really appreciate all of the advice about college, managing money, and life in general. I’m so grateful you guys took time out of your summer to help me and and I’m glad I have two women in tech to look up to! - Monica</p>
 	</div>
 
 	<div class="centerNote">
