--- a/notes.html
+++ b/notes.html
@@ -55,7 +55,7 @@ $(document).ready(function(){
 
 	<div class="leftNote">
 		<h3>Dear Ankita,</h3>
-		<p>Thank you so much for being my mentor this summer. You helped me think a lot about my future and about what I really want as a career. It was fun getting to know you and I hope we keep in touch!<br>-Tiffany </p>
+		<p style="font-family: 'Cantarell', sans-serif;">Thank you so much for being my mentor this summer. You helped me think a lot about my future and about what I really want as a career. It was fun getting to know you and I hope we keep in touch!<br>-Tiffany </p>
 	</div>
 
 	<div class="rightNote">
