--- a/notes.html
+++ b/notes.html
@@ -4,7 +4,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="thankyou1.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link href="http://fonts.googleapis.com/css?family=Fjalla+One|Cantarell:400,400italic,700italic,700" rel="stylesheet" type="text/css" />
+	<link href="https://fonts.googleapis.com/css?family=Cantarell|Fjalla+One|PT+Sans+Narrow" rel="stylesheet">
 	<title>Thank you!</title>
 </head>
 
