--- a/memories.html
+++ b/memories.html
@@ -40,7 +40,7 @@ $(document).ready(function(){
 	<div class="menu">
 		<div class="menucontent">
 			<a href="index.html">Home</a>
-			<a href="#thanks">Dear BoA</a>
+			<a href="index.html">Dear BoA</a>
 	    <a href="memories.html">Memories</a>
 	    <a href="notes.html">Notes</a>
 		</div>
